# elf

./: CMakeLists.txt
include/elf/: reader.h
src/: reader.cpp  symbol.cpp
